Fix referrer_id check to validate against 0 instead of null.
Previously, the code incorrectly checked if `referrer_id` was `null`, causing issues when `referrer_id` was set to 0. This update ensures proper validation and handling of referrer logic by checking against 0.

--- a/lang/en.json
+++ b/lang/en.json
@@ -56,8 +56,12 @@
     "Completely online / Remote": "Completely online/remotely",
     "Partially online": "Partially online",
     "On location": "At the location of the company",
+    "Field work": "Field work",
+    "Stimulation / Provision": "Stimulation / Provision",
+    "Start typing and choose your address": "Start typing and choose your address",
     "If the job's location is the same as your company location, you may leave these fields empty. The job location will be the same as your company's location!": "If the job's location is the same as your company's location, you may leave these fields empty .The work location will be the same as your company location!",
     "Zip": "Zip code",
+    "Don't have an account yet?": "Don't have an account yet?",
     "Number of open positions": "Number of positions",
     "Estimated annual salary": "Estimated annual salary",
     "Currency": "Currency",
