--- a/lang/sl.json
+++ b/lang/sl.json
@@ -56,8 +56,12 @@
     "Completely online / Remote": "Povsem preko spleta/na daljavo",
     "Partially online": "Delno preko spleta",
     "On location": "Na lokaciji podjetja",
+    "Field work": "Terensko delo",
+    "Stimulation / Provision": "Stimulacija / Provizija",
+    "Start typing and choose your address": "Začnite tipkati in izberite vaš naslov iz seznama",
     "If the job's location is the same as your company location, you may leave this fields empty. The job location will be the same as your company's location!": "Če je lokacija delovnega mesta enaka lokaciji vašega podjetja, lahko ta polja pustite prazna. Lokacija dela bo enaka lokaciji vašega podjetja!",
     "Zip": "Poštna številka",
+    "Don't have an account yet?": "Še nimate uporabniškega računa?",
     "Number of open positions": "Število delovnih mest",
     "Estimated yearly salary": "Predvidena letna plača",
     "Currency": "Valuta",
