--- a/lang/en.json
+++ b/lang/en.json
@@ -466,5 +466,10 @@
     "Welcome aboard. Your account has been partially created. Please finish your registration by clicking the button below.": "Welcome aboard. Your account has been partially created. Please finish your registration by clicking the button below.",
     "Complete registration": "Complete registration",
     "If this was not you, please contact us, to delete your account.": "If this was not you, please contact us, to delete your account.",
-    "We are thrilled to have you on board and we can't wait to help you reach more people!": "We are thrilled to have you on board and we can't wait to help you reach more people!"
+    "We are thrilled to have you on board and we can't wait to help you reach more people!": "We are thrilled to have you on board and we can't wait to help you reach more people!",
+    "Companies added by you": "Companies added by you",
+    "You have added a total of :count companies": "You have added a total of :count companies",
+    "Registration completed": "Registration completed",
+    "Registered on": "Registered on",
+    "Your notes, such as their phone number for recalling purposes, address, special conditions, etc.": "Your notes, such as their phone number for recalling purposes, address, special conditions, etc."
     }
