--- a/lang/sl.json
+++ b/lang/sl.json
@@ -169,7 +169,7 @@
     "Account created!": "Račun ustvarjen!",
     "We are happy that you decided to join us!": "Veseli nas, da ste se nam pridružili!",
     "We've sent an confirmation link to your email account, please verify your email to login!": "Poslali smo potrditveno povezavo na vaš e-poštni naslov. Za prijavo je potrebna je potrditev e-naslova!",
-    "Find your dream remote job": "Poiščite svojo sanjsko službo preko spleta",
+    "Find your dream remote job": "Želiš biti fleksibilen?  Delaj od kjerkoli, kadarkoli!",
     "Do what you love to do - remotely!": "Počnite, kar radi počnete – na daljavo!",
     "Work from anywhere": "Delajte od koder koli",
     "Your remote job awaits": "Čaka vas služba preko spleta",
@@ -471,5 +471,15 @@
     "You have added a total of :count companies": "Dodali ste :count podjetij",
     "Registration completed": "Registracija zaključena",
     "Registered on": "Registriran dne",
-    "Your notes, such as their phone number for recalling purposes, address, special conditions, etc.": "Vaše opombe, kot je njihova telefonska številka za ponovno klicanje, naslov, posebni pogoji itd."
+    "Your notes, such as their phone number for recalling purposes, address, special conditions, etc.": "Vaše opombe, kot je njihova telefonska številka za ponovno klicanje, naslov, posebni pogoji itd.",
+    "Welcome to JobHuntr, please complete your registration!": "Dobrodošli na portalu JobHuntr, prosimo zaključite vašo registracijo!",
+    "To use this filter, we need the access to your location.": "Za uporabo tega filtra, potrebujemo dostop do vaše lokacije.",
+    "Permanent employment": "Redna zaposlitev, nedoločen čas",
+    "Permanent employment, fixed term": "Redna zaposlitev, določen čas",
+    "Part-time work": "Polovični delovni čas",
+    "Contract work": "Delo po pogodbi",
+    "Project work": "Projektno delo",
+    "Casual work": "Občasno delo",
+    "Practical training": "Praktično usposabljanje",
+    "Work for retirees": "Delo upokojencev"
 }
