Add education level system and integrate with job and user models
Introduced a new education level system with a corresponding database table, model, and API endpoint. Updated user and job models to reference education levels via `education_id` and adjusted existing logic for filtering, displaying, and managing education-related data across the application.

--- a/lang/en.json
+++ b/lang/en.json
@@ -481,5 +481,15 @@
     "Project work": "Project work",
     "Casual work": "Casual work",
     "Practical training": "Practical training",
-    "Work for retirees": "Work for retirees"
+    "Work for retirees": "Work for retirees",
+    "Early childhood education": "Early childhood education",
+    "Primary education": "Primary education",
+    "Lower secondary education": "Lower secondary education",
+    "Upper secondary education": "Upper secondary education",
+    "Post-secondary non-tertiary education": "Post-secondary non-tertiary education",
+    "Short-cycle tertiary education": "Short-cycle tertiary education",
+    "Bachelor’s or equivalent level": "Bachelor’s or equivalent level",
+    "Master’s or equivalent level": "Master’s or equivalent level",
+    "Doctoral or equivalent level": "Doctoral or equivalent level",
+    "Minimal education required": "Minimal education required"
     }
