Refactor coordinate structure and add region to address.
Updated the coordinate structure to directly include latitude and longitude, removing nested "coordinates". Added "region" field to address validation arrays. Adjusted corresponding models, controllers, and frontend components to reflect these changes.

--- a/lang/en.json
+++ b/lang/en.json
@@ -491,5 +491,7 @@
     "Bachelor’s or equivalent level": "Bachelor’s or equivalent level",
     "Master’s or equivalent level": "Master’s or equivalent level",
     "Doctoral or equivalent level": "Doctoral or equivalent level",
-    "Minimal education required": "Minimal education required"
+    "Minimal education required": "Minimal education required",
+    "The password must have a minimum of 8 characters": "The password must have a minimum of 8 characters!",
+    "The password must include a symbol!": "The password must include a symbol!"
     }
