Simplify localization and update Slovenian translation.
Removed server-side locale detection and implemented timezone-based client-side language setting. Adjusted the Slovenian translation for "Hospitality Management" to improve clarity.

--- a/lang/sl.json
+++ b/lang/sl.json
@@ -381,7 +381,7 @@
     "Retail Management": "Upravljanje trgovin",
     "Sales": "Prodaja",
     "Customer Service": "Skrb za stranke",
-    "Hospitality Management": "Upravljanje gostinstva",
+    "Hospitality Management": "Gostinstvo",
     "Travel and Tourism": "Potovanja in turizem",
     "Event Planning": "Načrtovanje dogodkov",
     "E-commerce": "E-trgovina",
