--- a/lang/sl.json
+++ b/lang/sl.json
@@ -17,7 +17,8 @@
     "Bachelor's degree": "Diploma",
     "Master's degree": "Magisterij",
     "Doctorate or higher": "Doktorat ali višja",
-    "Update your profile": "Posodobite svoj profil",
+    "Update your profile": "Posodobi svoj profil",
+    "Hello, :name!": "Živjo, :name!",
     "Spruce up your profile, :name!": "Olepšaj svoj profil, :name!",
     "Your education": "Vaša izobrazba",
     "Date of birth": "Datum rojstva",
@@ -55,9 +56,9 @@
     "Work location": "Lokacija dela",
     "Completely online / Remote": "Povsem preko spleta/na daljavo",
     "Partially online": "Delno preko spleta",
-    "On location": "Na lokaciji podjetja",
+    "On location": "Fizično na lokaciji",
     "Field work": "Terensko delo",
-    "Stimulation / Provision": "Stimulacija / Provizija",
+    "Provision": "Provizija",
     "Start typing and choose your address": "Začnite tipkati in izberite vaš naslov iz seznama",
     "If the job's location is the same as your company location, you may leave this fields empty. The job location will be the same as your company's location!": "Če je lokacija delovnega mesta enaka lokaciji vašega podjetja, lahko ta polja pustite prazna. Lokacija dela bo enaka lokaciji vašega podjetja!",
     "Zip": "Poštna številka",
@@ -77,7 +78,7 @@
     "Master's degree or equivalent": "Magistrska izobrazba",
     "Doctorate": "Doktorska izobrazba",
     "Application email": "E-poštni naslov za prijavo",
-    "apply@company.com": "apply@company.com",
+    "apply@company.com": "prijave@podjetje.si",
     "You may leave this empty and it will be set to the same email as your company's email": "To polje lahko pustite prazno in bo nastavljeno na e-poštni naslov vašega podjetja",
     "Account Information": "Podatki o računu",
     "Lets create a way to login!": "Ustvarimo način za prijavo!",
@@ -493,5 +494,11 @@
     "Doctoral or equivalent level": "VIII./2 - doktorati znanosti",
     "Minimal education required": "Minimalna stopnja izobrazbe",
     "The password must have a minimum of 8 characters": "Geslo mora vsebovati vsaj 8 znakov!",
-    "The password must include a symbol!": "Geslo mora vsebovati vsaj en simbol!"
+    "The password must include a symbol!": "Geslo mora vsebovati vsaj en simbol!",
+    "This text will be visible on job cards, on the front page of jobhuntr": "To besedilo bo vidno na karticah delovnih mest na prvi strani portala JobHuntr",
+    "Enter text": "Vnesi besedilo",
+    "By agreement": "Po dogovoru",
+    "Front page": "Domača stran",
+    "Draft": "Osnutek",
+    "Active": "Aktivno"
 }
