Add job application functionality
Implemented job application feature, including a database migration, model, controller, and notification system. Introduced modals and components in the front end to enable users to apply for jobs with optional cover letters, along with support for status tracking and validations. Updated routes, interfaces, and localization files to support this functionality.

--- a/lang/sl.json
+++ b/lang/sl.json
@@ -514,5 +514,24 @@
     "In order to apply through JobHuntr, you need to complete the following steps:": "Za oddajo prijav preko portala JobHuntr morate dokončati naslednje korake:",
     "You have not uploaded any resume yet. Upload your resume now to showcase your skills and experience!": "Niste še naložili nobenega življenjepisa. Naložite svoj življenjepis zdaj, da predstavite svoje veščine in izkušnje!",
     "You have verified your email": "Preverili ste svoj e-poštni naslov",
-    "Job Search": "Iskalnik"
+    "Job Search": "Iskalnik",
+    "Hey there!": "Živjo!",
+    "Create your account now": "Ustvari svoj račun",
+    "to streamline your job application and employment process!": "za hitrejšo prijavo na delovna mesta in poenostavitev zaposlitvenega postopka!",
+    "Please complete all required steps before applying for jobs": "Prosimo, dokončajte vse zahtevane korake, preden se prijavite na delovna mesta",
+    "All steps can be found on your": "Vse korake lahko najdete na svoji",
+    "profile page": "strani profila",
+    "You are about to apply for the position \":jobPosition\"": "Prijavljate se na delovno mesto \":jobPosition\"",
+    "Enter you cover letter (optional)": "Vnesite svojo spremno pismo (neobvezno)",
+    "Apply": "Prijavi se",
+    "Cancel": "Prekliči",
+    "Fingers crossed!": "Držimo pesti!",
+    "Your application has been sent successfully!": "Vaša prijava je bila uspešno poslana!",
+    "JobHuntr: New applicant for :jobTitle !": "JobHuntr: Novi kandidat za :jobTitle !",
+    "A new applicant has applied for your job through our system.": "Novi kandidat se je prijavil na vaše delovno mesto preko našega sistema.",
+    "The users resume is attached to this email.": "Uporabnikov življenjepis je priložen temu sporočilu.",
+    "Applicant's cover letter:": "Kandidatovo spremno pismo:",
+    "Visit your dashboard": "Obiščite svojo nadzorno ploščo",
+    "Thank you for using our application!": "Hvala, ker uporabljate portal JobHuntr!",
+    "Applied at": "Prijava dne"
 }
