--- a/lang/en.json
+++ b/lang/en.json
@@ -514,5 +514,24 @@
     "In order to apply through JobHuntr, you need to complete the following steps:": "In order to apply through JobHuntr, you need to complete the following steps:",
     "You have not uploaded any resume yet. Upload your resume now to showcase your skills and experience!": "You have not uploaded any resume yet. Upload your resume now to showcase your skills and experience!",
     "You have verified your email": "You have verified your email",
-    "Job Search": "Job Search"
+    "Job Search": "Job Search",
+    "Hey there!": "Hey there!",
+    "Create your account now": "Create your account now",
+    "to streamline your job application and employment process!": "to streamline your job application and employment process!",
+    "Please complete all required steps before applying for jobs": "Please complete all required steps before applying for jobs",
+    "All steps can be found on your": "All steps can be found on your",
+    "profile page": "profile page",
+    "You are about to apply for the position \":jobPosition\"": "You are about to apply for the position \":jobPosition\"",
+    "Enter you cover letter (optional)": "Enter you cover letter (optional)",
+    "Apply": "Apply",
+    "Cancel": "Cancel",
+    "Fingers crossed!": "Fingers crossed!",
+    "Your application has been sent successfully!": "Your application has been sent successfully!",
+    "JobHuntr: New applicant for :jobTitle !": "JobHuntr: New applicant for :jobTitle !",
+    "A new applicant has applied for your job through our system.": "A new applicant has applied for your job through our system.",
+    "The users resume is attached to this email.": "The users resume is attached to this email.",
+    "Applicant's cover letter:": "Applicant's cover letter:",
+    "Visit your dashboard": "Visit your dashboard",
+    "Thank you for using our application!": "Thank you for using JobHuntr!",
+    "Applied at": "Applied at"
 }
