Add message for empty application history state
Introduced a fallback message when no job applications exist in the user's history. Updated translations to include the new message in English and Slovenian. Additionally, adjusted styling and removed unused `useEffect` code from the application history component.

--- a/lang/sl.json
+++ b/lang/sl.json
@@ -533,5 +533,6 @@
     "Applicant's cover letter:": "Kandidatovo spremno pismo:",
     "Visit your dashboard": "Obiščite svojo nadzorno ploščo",
     "Thank you for using our application!": "Hvala, ker uporabljate portal JobHuntr!",
-    "Applied at": "Prijava dne"
+    "Applied at": "Prijava dne",
+    "You have not applied to any jobs yet": "Niste se še prijavili na nobeno delovno mesto"
 }
