--- a/lang/en.json
+++ b/lang/en.json
@@ -533,5 +533,6 @@
     "Applicant's cover letter:": "Applicant's cover letter:",
     "Visit your dashboard": "Visit your dashboard",
     "Thank you for using our application!": "Thank you for using JobHuntr!",
-    "Applied at": "Applied at"
+    "Applied at": "Applied at",
+    "You have not applied to any jobs yet": "You have not applied to any jobs yet"
 }
