--- a/lang/en.json
+++ b/lang/en.json
@@ -534,5 +534,9 @@
     "Visit your dashboard": "Visit your dashboard",
     "Thank you for using our application!": "Thank you for using JobHuntr!",
     "Applied at": "Applied at",
-    "You have not applied to any jobs yet": "You have not applied to any jobs yet"
+    "You have not applied to any jobs yet": "You have not applied to any jobs yet",
+    "This job was not found.": "This job was not found.",
+    "This job listing has expired.": "This job listing has expired.",
+    "This job listing is not open for applications.": "This job listing is not open for applications.",
+    "Error saving job application, please try again.": "Error saving job application, please try again."
 }
