Add job activation modal with validation and date picker
Introduced a modal for activating job postings, allowing users to select an expiration date with a date picker and added validation. Updated backend logic to handle activation via a JSON response and applied standard date formatting. Included new dependencies such as `react-datepicker` and translations for related messages.

--- a/lang/en.json
+++ b/lang/en.json
@@ -538,5 +538,10 @@
     "This job was not found.": "This job was not found.",
     "This job listing has expired.": "This job listing has expired.",
     "This job listing is not open for applications.": "This job listing is not open for applications.",
-    "Error saving job application, please try again.": "Error saving job application, please try again."
+    "Error saving job application, please try again.": "Error saving job application, please try again.",
+    "You are about to active a job posting for: \":jobPosition\"": "You are about to active a job posting for: \":jobPosition\"",
+    "Job activated": "Job activated",
+    "This job posting was activated successfully! It will now be visible to all users.": "This job posting was activated successfully! It will now be visible to all users.",
+    "Please select a deadline.": "Please select a deadline.",
+    "Cancel job listing": "Cancel job listing"
 }
