Add gender field to user model and related components
This update introduces a gender field to the user model, database, and user-facing forms. Necessary backend and frontend changes were made, including validation, migration, API updates, and UI adjustments. Placeholder texts and localization keys were also added for enhanced usability.

--- a/lang/en.json
+++ b/lang/en.json
@@ -543,5 +543,7 @@
     "Job activated": "Job activated",
     "This job posting was activated successfully! It will now be visible to all users.": "This job posting was activated successfully! It will now be visible to all users.",
     "Please select a deadline.": "Please select a deadline.",
-    "Cancel job listing": "Cancel job listing"
+    "Cancel job listing": "Cancel job listing",
+    "Gender": "Gender",
+    "Select": "Select"
 }
