--- a/lang/sl.json
+++ b/lang/sl.json
@@ -543,5 +543,7 @@
     "Job activated": "Oglas aktiviran",
     "This job posting was activated successfully! It will now be visible to all users.": "Oglas za delo je bil uspešno aktiviran! Zdaj bo viden vsem uporabnikom.",
     "Please select a deadline.": "Prosimo, izberite rok za prijavo.",
-    "Cancel job listing": "Prekliči oglas"
+    "Cancel job listing": "Prekliči oglas",
+    "Gender": "Spol",
+    "Select": "Izberi"
 }
