Add user and company analytics widgets; update UI with fixes
Introduced `UserGainedChart` and `UsersGainedOverview` widgets for user and job analytics. Enhanced job management functionality, including the ability to activate/deactivate job listings and enforce proper workflows. Improved UI consistency, added company details visibility, and corrected minor issues like localization, routing, and query adjustments.

--- a/lang/en.json
+++ b/lang/en.json
@@ -545,5 +545,6 @@
     "Please select a deadline.": "Please select a deadline.",
     "Cancel job listing": "Cancel job listing",
     "Gender": "Gender",
-    "Select": "Select"
+    "Select": "Select",
+    "To edit this job post, please deactivate it first.": "To edit this job post, please deactivate it first."
 }
