Add user and company analytics widgets; update UI with fixes
Introduced `UserGainedChart` and `UsersGainedOverview` widgets for user and job analytics. Enhanced job management functionality, including the ability to activate/deactivate job listings and enforce proper workflows. Improved UI consistency, added company details visibility, and corrected minor issues like localization, routing, and query adjustments.

--- a/lang/en.json
+++ b/lang/en.json
@@ -49,7 +49,7 @@
     "Customer service representative": "Representative for contacts with customers",
     "Full-Time": "Full-time",
     "Part-Time": "Part-Time",
-    "Students work": "Part-Time",
+    "Students work": "Students work",
     "By contract": "By contract",
     "Job description": "Description of the position",
     "Handle customer complaints, provide appropriate solutions and alternatives...": "Handling complaints, providing appropriate solutions and alternatives...",
