``` Simplify translation for 'Educational Administration'.
Updated the Slovenian translation for 'Educational Administration' to a more concise term, improving clarity and consistency with other entries in the localization file.
```

--- a/lang/sl.json
+++ b/lang/sl.json
@@ -328,7 +328,7 @@
     "Secondary Education": "Srednješolsko izobraževanje",
     "Higher Education": "Visokošolsko izobraževanje",
     "Special Education": "Posebno izobraževanje",
-    "Educational Administration": "Izobraževalna administracija",
+    "Educational Administration": "Administracija",
     "Curriculum Development": "Razvoj učnega načrta",
     "Educational Technology": "Izobraževalna tehnologija",
     "Adult Education": "Izobraževanje odraslih",
